# CG_2023-2

./: LICENSE  README.md
Atividade02/: CMakeLists.txt  readme.md  teste.txt
Atividade02/docs/html/: annotated.html  at02__mat2_8hpp.html  at02__mat2_8hpp_source.html  at02__mat3_8hpp.html  at02__mat3_8hpp_source.html  at02__mat4_8hpp.html  at02__mat4_8hpp_source.html  at02__vec2_8hpp.html  at02__vec2_8hpp_source.html  at02__vec4_8hpp.html  at02__vec4_8hpp_source.html  classes.html  classmat2-members.html  classmat2.html  classmat3-members.html  classmat3.html  classmat4-members.html  classmat4.html  classvec2-members.html  classvec2.html  classvec4-members.html  classvec4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  menudata.js
Atividade02/src/: at02_mat2.hpp  at02_mat3.hpp  at02_mat4.hpp  at02_vec2.hpp  at02_vec3.hpp  at02_vec4.hpp
Atividade02/tests/: CMakeLists.txt  at02_tests.cpp
Atividade03/: CMakeLists.txt  readme.md
Atividade03/docs/html/: annotated.html  at03__main_8cpp.html  at03__my_class__obj_loader_8hpp.html  at03__my_class__obj_loader_8hpp_source.html  classes.html  classmy_class___obj_loader-members.html  classmy_class___obj_loader.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  structmy_class___obj_loader_1_1_coordenada_textura-members.html  (+13 more)
Atividade03/src/: at03_myClass_objLoader.hpp
Atividade03/tests/: CMakeLists.txt  at03_tests.cpp
(+408 files in other folders)
